# music-federation

./: Cargo.toml  README.md  album.graphql  instrument.graphql  music.graphql  musician.graphql  supergraph.yaml
album/: Cargo.toml
album/src/: main.rs
instrument/: Cargo.toml
instrument/src/: main.rs
musician/: Cargo.toml
musician/src/: main.rs
