[workspace]
members = [
    "album",
    "musician",
    "instrument",
]

[workspace.dependencies]
axum = "0.7.4"
async-graphql = "7.0.0"
async-graphql-axum = "7.0.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = "0.7.8"
tokio-stream = "0.1.14"
tower-service = "0.3"
async-trait = "0.1.73"
